force-app/main/default/objects/Asset/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product Registration</relationshipLabel>
    <relationshipName>Product_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>