force-app/main/default/objects/Asset/fields/Extended_Warranty_Code__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The unique security code that is supplied when an extended warranty is purchased.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Extended warranty unique security code</inlineHelpText>
    <label>Extended Warranty Code</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>