force-app/main/default/objects/Asset/fields/Promotional_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotional Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>