force-app/main/default/objects/Asset/fields/Purchased_From__c.field-meta.xml
<CustomField>
    <fullName>Purchased_From__c</fullName>
    <description>Text-based entry from SV Product Registration page. Only populated if ReferringPartner not found.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text-based entry from SV Product Registration page. Only populated if ReferringPartner not found.</inlineHelpText>
    <label>Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>