force-app/main/default/objects/Asset/fields/referringPartner__c.field-meta.xml
<CustomField>
    <fullName>referringPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Partner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND (2 OR 3)) OR 4 OR 5 OR 6 OR 7</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner, Accredited Partner, Partner - Sleep Lab</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner - Sleep Lab</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Accredited Partner, Partner - Sleep Lab, Inactive/closed</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>sleepvantage Manager, sleepvantage Super Consultant</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>customers Profile</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>ROC Integration</value>
        </filterItems>
        <infoMessage>The Referring Partner must be a partner type of Partner or Partner - Sleep Lab.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Referral</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>