force-app/main/default/objects/Asset/fields/Serial_Number_Validation_Failed__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Validation_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serial Number Validation Failed</label>
    <type>Checkbox</type>
</CustomField>