force-app/main/default/objects/Asset/fields/warrantyType__c.field-meta.xml
<CustomField>
    <fullName>warrantyType__c</fullName>
    <description>Standard if not a member. SV Warranty if user is SV Member (auto extension), Extended if a warranty was purchased or provided as a promo.</description>
    <inlineHelpText>Standard if not a member. SV Warranty if user is SV Member (auto extension), Extended if a warranty was purchased or provided as a promo.</inlineHelpText>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Warranty</fullName>
            </value>
            <value>
                <fullName>SV Warranty</fullName>
            </value>
            <value>
                <fullName>Extended Warranty</fullName>
            </value>
            <value>
                <fullName>Ex Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>